--- a/snyder-volunteer-site.csproj
+++ b/snyder-volunteer-site.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>snyder_volunteer_site</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+  </ItemGroup>
+
 </Project>
