Added owen's stuff and made changes where needed

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileStorage": "C:\\Users\\Broxt\\source\\repos\\snyder-volunteer-site\\wwwroot\\images",
+  "WebStorageRoot": "./images",
+  "ConnectionStrings": {
+    //Replace with your own database connection thing (Also you can change the name from Default if you want)
+    //Basically you find it in the Properties section of your Database and you copy the thing labeled "connection string" from there to here
+    "Default": "Data Source=BROXTON-LAPTOP;Initial Catalog=SnyderProjectDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
